--- a/index.html
+++ b/index.html
@@ -1,32 +1,42 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flashcard</title>
-<link rel="stale"
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
         <section id="container" >
-         <article class="cartao">
-             <div class="cartao_conteudo" ></div>
-                 <h3>programação</h3>
-                 <div class="cartao_conteudo_pergunta" >
-                      oque é javascript?
-                  </div>
-                  <div classe=cartao__conteudo__reposta¨>
-                    O JavaScript é uma linguagem de 
-                    programação.
-                  </div>
-              </div>
-          </article>
-       </section>
-   </main>
+            <article class="cartao"  >
+                <div class="cartao__conteudo" >
+                    <h3>Programação</h3>
+                    <div class="cartao__conteudo__pergunta" >
+                        O que é JavaScript?
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        O JavaScript é uma linguagem de programação.
+                    </div>
+                </div>
+            </article>
+
+            <article class="cartao"  >
+                <div class="cartao__conteudo" >
+                    <h3>Programação</h3>
+                    <div class="cartao__conteudo__pergunta" >
+                        O que é CSS?
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        O CSS é uma linguagem de estilização.
+                    </div>
+                </div>
+            </article>
+        </section>
+    </main>
 
     <footer>
-        <p>projeto desenvolvimento nas aulas de programação,sem
-            fins lucrativos.</p>
+        <p>Projeto desenvolvido nas aulas de programação, sem fins lucrativos.</p>
     </footer>
    
 </body>
