--- a/index.html
+++ b/index.html
@@ -41,3 +41,38 @@
    
 </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Flashcard</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <main>
+        <section id="container">
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <p>JOGOS</p>
+                    <div class="cartao__conteudo__pergunta">
+                        <p>ULTRAKILL È BOM?</p>
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                        <p>PRA KRL</p>
+                    </div>
+                </div>
+            </article>
+        </section>
+    </main>
+
+    <footer>
+        <p>Projeto desenvolvido nas aulas de programação, sem fins lucrativos.</p>
+    </footer>
+
+</body>
+
+</html>
